--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.1.0
   firebase_analytics: ^11.0.1
+  cloud_firestore: ^5.0.1
 
 dev_dependencies:
   flutter_test:
