--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_analytics: ^11.0.1
   cloud_firestore: ^5.0.1
+  firebase_auth: ^5.1.0
 
 dev_dependencies:
   flutter_test:
