--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_analytics: ^11.0.1
   cloud_firestore: ^5.0.1
   firebase_auth: ^5.1.0
+  firebase_crashlytics: ^4.0.1
 
 dev_dependencies:
   flutter_test:
