--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.0.1
   firebase_auth: ^5.1.0
   firebase_crashlytics: ^4.0.1
+  firebase_messaging: ^15.0.3
 
 dev_dependencies:
   flutter_test:
