--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.1.0
   firebase_crashlytics: ^4.0.1
   firebase_messaging: ^15.0.3
+  firebase_remote_config: ^5.0.3
 
 dev_dependencies:
   flutter_test:
